@@ -3,8 +3,16 @@
     <setting id="sage_ip" type="text" label="20000" default="127.0.0.1"/>
     <setting id="sage_port" type="number" label="20001" default="8080"/>
     <setting id="sage_user" type="text" label="20002" default="sage"/>
-    <setting id="sage_pass" type="text" label="20003" default="frey"/>
+    <setting id="sage_pass" type="text" option="hidden" label="20003" default="frey"/>
     <setting type="sep" />
     <setting id="sage_rec" type="text" label="20004" default="T:\SageTV Recordings\" />
     <setting id="sage_unc" type="folder" label="20005" default=""/>
+    <setting id="sage_rec2" enable="!eq(-1,)" type="text" label="20004" default="T:\SageTV Recordings\" />
+    <setting id="sage_unc2" enable="!eq(-2,)" type="folder" label="20005" default=""/>
+    <setting id="sage_rec3" enable="!eq(-1,)" type="text" label="20004" default="T:\SageTV Recordings\" />
+    <setting id="sage_unc3" enable="!eq(-2,)" type="folder" label="20005" default=""/>
+    <setting id="sage_rec4" enable="!eq(-1,)" type="text" label="20004" default="T:\SageTV Recordings\" />
+    <setting id="sage_unc4" enable="!eq(-2,)" type="folder" label="20005" default=""/>
+    <setting id="sage_rec5" enable="!eq(-1,)" type="text" label="20004" default="T:\SageTV Recordings\" />
+    <setting id="sage_unc5" enable="!eq(-2,)" type="folder" label="20005" default=""/>
 </settings>
